Fixed some bugs
1. JavaEditor doesn't know getLast()
2. Clicking somewhere else to hide extra windows now works again